--- a/src/input.css
+++ b/src/input.css
@@ -135,6 +135,10 @@
     height: 450px !important;
   }
 
+  .width-80{
+    width: 100%;
+  }
+
   @media screen and (min-width:600px) {
     .vh-100{
       height: 100vh;
