--- a/src/output.css
+++ b/src/output.css
@@ -665,6 +665,10 @@ video {
   height: 2.75rem;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-40 {
   height: 10rem;
 }
@@ -679,14 +683,6 @@ video {
 
 .h-64 {
   height: 16rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-12 {
-  height: 3rem;
 }
 
 .w-10 {
@@ -1090,6 +1086,10 @@ html {
 
 .h-98{
   height: 450px !important;
+}
+
+.width-80{
+  width: 100%;
 }
 
 @media screen and (min-width:600px) {
