--- a/src/output.css
+++ b/src/output.css
@@ -802,6 +802,16 @@ video {
   border-color: rgb(49 46 129 / var(--tw-border-opacity));
 }
 
+.border-red-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(127 29 29 / var(--tw-border-opacity));
+}
+
+.border-red-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity));
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -882,10 +892,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pe-2 {
-  padding-inline-end: 0.5rem;
 }
 
 .text-center {
@@ -1112,6 +1118,14 @@ html {
     width: 90%;
   }
 
+  .h-service-photo{
+    height: 400px;
+  }
+
+  .w-service-photo{
+    width: 600px;
+  }
+
   .h-98{
     height: 450px !important;
   }
@@ -1251,6 +1265,10 @@ html {
 
   .md\:p-0 {
     padding: 0px;
+  }
+
+  .md\:p-3 {
+    padding: 0.75rem;
   }
 
   .md\:text-left {
