--- a/src/output.css
+++ b/src/output.css
@@ -802,16 +802,6 @@ video {
   border-color: rgb(49 46 129 / var(--tw-border-opacity));
 }
 
-.border-red-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(127 29 29 / var(--tw-border-opacity));
-}
-
-.border-red-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
-
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1123,12 +1113,62 @@ html {
   }
 
   .w-service-photo{
-    width: 600px;
+    width: 400px;
   }
 
   .h-98{
     height: 450px !important;
   }
+}
+
+label{
+  display:flex;
+  flex-direction:column;
+  width:45px;
+  cursor:pointer;
+}
+
+label span{
+  background: #0b0b0b;
+  border-radius:10px;
+  height:3px;
+  margin: 2px 0;
+  transition: .4s  cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+span:nth-of-type(1){
+  width:40%;
+  /* background-color: aqua; */
+}
+
+span:nth-of-type(2){
+  width:75%;
+  /* background-color: rgb(255, 153, 0); */
+}
+
+span:nth-of-type(3){
+  width:55%;
+  /* background-color: rgb(36, 195, 78); */
+}
+
+input[type="checkbox"]{
+  display:none;
+}
+
+input[type="checkbox"]:checked ~ span:nth-of-type(1){
+  transform-origin:bottom;
+  transform:rotatez(45deg) translate(3px,-1px)
+}
+
+input[type="checkbox"]:checked ~ span:nth-of-type(2){
+  transform-origin:top;
+  transform:rotatez(-45deg)
+}
+
+input[type="checkbox"]:checked ~ span:nth-of-type(3){
+  transform-origin:bottom;
+  width:45%;
+  transform: translate(12.5px,-3px) rotatez(45deg);
 }
 
 .hover\:border-transparent:hover {
@@ -1343,3 +1383,4 @@ html {
     }
   }
 }
+  
