--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,62 +1,94 @@
-  label{
-    display:flex;
-    flex-direction:column;
-    width:45px;
-    cursor:pointer;
-  }
+  // label{
+  //   display:flex;
+  //   flex-direction:column;
+  //   width:45px;
+  //   cursor:pointer;
+  // }
   
-  label span{
-    background: #0b0b0b;
-    border-radius:10px;
-    height:3px;
-    margin: 2px 0;
-    transition: .4s  cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  // label span{
+  //   background: #0b0b0b;
+  //   border-radius:10px;
+  //   height:3px;
+  //   margin: 2px 0;
+  //   transition: .4s  cubic-bezier(0.68, -0.6, 0.32, 1.6);
   
-  }
+  // }
+  
+  // span:nth-of-type(1){
+  //   width:40%;
+
+  // }
+  
+  // span:nth-of-type(2){
+  //   width:75%;
+  // }
   
   
-  span:nth-of-type(1){
-    width:40%;
-    /* background-color: aqua; */
+  // span:nth-of-type(3){
+  //   width:55%;
+
+  // }
+  
+  
+  // input[type="checkbox"]{
+  //   display:none;
+  // }
+  
+  
+  // input[type="checkbox"]:checked ~ span:nth-of-type(1){
+  //   transform-origin:bottom;
+  //   transform:rotatez(45deg) translate(3px,-1px)
+  // }
+  
+  
+  // input[type="checkbox"]:checked ~ span:nth-of-type(2){
     
-  }
-  
-  span:nth-of-type(2){
-    width:75%;
-    /* background-color: rgb(255, 153, 0); */
-  }
+  //   transform-origin:top;
+  //   transform:rotatez(-45deg)
+  // }
   
   
-  span:nth-of-type(3){
-    width:55%;
-    /* background-color: rgb(36, 195, 78); */
-  }
-  
-  
-  input[type="checkbox"]{
-    display:none;
-  }
-  
-  
-  input[type="checkbox"]:checked ~ span:nth-of-type(1){
-    transform-origin:bottom;
-    transform:rotatez(45deg) translate(3px,-1px)
-  }
-  
-  
-  input[type="checkbox"]:checked ~ span:nth-of-type(2){
+  // input[type="checkbox"]:checked ~ span:nth-of-type(3){
     
-    transform-origin:top;
-    transform:rotatez(-45deg)
+  //   transform-origin:bottom;
+  //   width:45%;
+  //   transform: translate(12.5px,-2.5px) rotatez(45deg);
+  
+  // }
+
+  .line {
+    fill: none;
+    stroke: #24252a;
+    stroke-width: 7;
+    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  
-  
-  input[type="checkbox"]:checked ~ span:nth-of-type(3){
-    
-    transform-origin:bottom;
-    width:45%;
-    transform: translate(12.5px,-2.5px) rotatez(45deg);
-  
+  .line1 {
+    stroke-dasharray: 60 207;
+    stroke-width: 7;
+  }
+  .line2 {
+    stroke-dasharray: 60 60;
+    stroke-width: 7;
+  }
+  .line3 {
+    stroke-dasharray: 60 207;
+    stroke-width: 7;
+  }
+  .opened .line1 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 7;
+  }
+  .opened .line2 {
+    stroke-dasharray: 1 60;
+    stroke-dashoffset: -30;
+    stroke-width: 7;
+  }
+  .opened .line3 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 7;
   }
 
   .site-nav-scroll{
